[package]
name = "unity-incremental-update-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
crc32fast = "1.4.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
zip = "2.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
    "time",
] }
tracing-appender = "0.2.3"
time = { version = "0.3.36", features = ["local-offset"] }
